# coffee_level_detection

./: .gitignore  CITATION.cff  README.md  coffee_level_annotations_summary.json  compiled_coffee_level_annotations.json  level_label_status.json  pyproject.toml  ratings.csv
.github/: copilot-instructions.md
coffee_level_detection/: app.py  fuzed_models.py  models.py
coffee_level_detection/dataset_collection/: compose_dataset.py  image_splitter.py  labeler.py  models.py  relabeler.py  smart_labeler.py
coffee_level_detection/inference/: __main__.py  coffeeCNN.pth  run_batch_inference.ipynb  tools.py
coffee_level_detection/inference/tests/: test_visualize_inference.py  visualize_label_images.py
coffee_level_detection/training/: coffee.py  coffee_finetune_runner.ipynb  finetune_coffeeCNN.py  run_training_coffeeCNN.ipynb  smart_finetune_workflow.py  train_coffeeCNN.py
coffee_level_detection/training/tests/: plot_model.py
