[project]
name = "coffee-level-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Konsta Kiirikki",email = "konsta.kiirikki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.8.0,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "torchvision (>=0.23.0,<0.24.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

